# embedded_software_flow

./: .clang-format  CMakeLists.txt  CmakeLists.txt  Dockerfile  Readme.md  config.yml  local_linux_pipeline_emaulation.sh  plantuml_model.txt
.circleci/: config.yml
Application/: CMakeLists.txt  CmakeLists.txt  Flash.c  Flash.h  IO_read.cpp  IO_read.h  IO_write.c  IO_write.h  LightController.h  RandomMinute.c  RandomMinute.h  TimeService.h  chapter3_led_driver.c  chapter3_led_driver.h  chapter8_lightscheduler.c  chapter8_lightscheduler.h
Python_based_modelling/: python_proof_of_concept.py
Software modelling/: chatgpt_microwave_gui.py  python_model.py  simulate_grill_operation_simple.json  simulate_mw_operation_simple.json
Software modelling/Docs/: plantuml_microwave_model.txt
Source/: CMakeLists.txt  CmakeLists.txt  FakeTimeService.c  FakeTimeService.h  FakeTimeService_test.cpp  Fakerandom_minute.c  Fakerandom_minute.h  LightControllerSpy.c  LightControllerSpy.h  chapter10_mock_based_testing.cpp  chapter2_test_sprintf.cpp  chapter3_test_led_driver.cpp  chapter4_test_led_driver_continued.cpp  chapter8_test_lightsched.cpp  lightcontroller_spy_test.cpp  runtime_error.h  runtime_error_stub.c  runtime_error_stub.h  unit_1.cpp
